# aws-cdk-organizations-demo

./: .gitignore  README.md  cdk.context.json  important_commands.sh  pyproject.toml
.github/workflows/: deploy.yml
assets/: aws-cdk-organizations-demo-cicd.drawio  aws-cdk-organizations-demo.drawio
cdk/: app.py  requirements.txt
cdk/stacks/: cdk_organization.py  scp_allow_specific_regions.json  scp_prevent_leaving_org.json
tests/unit/: test_synth_success.py
